--- a/frontend/entrypoint.scss
+++ b/frontend/entrypoint.scss
@@ -6,9 +6,9 @@
 	font-family: Helvetica, sans-serif;
 	display: flex;
 	flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    height: 100%;
+        justify-content: center;
+        align-items: center;
+        height: 100vh;
 
 	h1 {
 		color: var(--text_highlight);
