--- a/frontend/entrypoint.scss
+++ b/frontend/entrypoint.scss
@@ -6,12 +6,17 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100vh;
-    
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    top: 0;
+    margin: auto;
+
     section {
         padding: 20px;
         margin: 10px;
-        background: var(--bg-content) ;
+        background: var(--bg-content);
         border-radius: 10px;
     }
 }
